tests/cases/compiler/conditionalExpressionNewLine2/index.ts
var v = a 
  ? b : c;
//~^^ ERROR: Cannot find name 'a'. 
//~^^ ERROR: Cannot find name 'b'. 
//~|  ERROR: Cannot find name 'c'. 
